# uclhal

./: .gitignore  .nojekyll  404.html  CNAME  LICENSE  README.md  _quarto.yml  archive.html  awesome.qmd  blog  conda_requirements.txt  conf.py  contact.html  contact.qmd  featured.html  featured.qmd  index.html  index.qmd  index.rst  listings.json  log.html  log.md  news.html  news.qmd  opportunities.html  opportunities.qmd  people.html  people.qmd  publications.html  publications.qmd  pyproject.toml  research.html  research.qmd  resources.html  resources.qmd  robots.txt  rss.xml  search.json  sitemap.xml  sitemapindex.xml  (+4 more)
2012/: index.html
2021/: index.html
_archive/: contact.qmd  fundamentals.qmd  howto.qmd  opportunities.qmd  reference.qmd  tutorial-1.qmd  tutorial-2.qmd
aasiyah-rashan/: index.html
about-nikola/: index.html
ahmed-al-hindawi/: index.html  index.rst
authors/: index.html  roberto-alsina.xml  steve-harris.xml
awesome_links/: Healthyr.qmd
blog/: index.html
bootstrap-demo/: index.html
categories/: awards.xml  blog.xml  cat_news.xml  cat_nikola.xml  demo.xml  emap.xml  hdr-uk.xml  index.html  news.xml  nikola.xml  python.xml
charts/: index.html
cheryl-achary/: index.html  index.rst
chris-tomlinson/: index.html
claire-black/: index.html
contact-us/: index.html  index.rst
creating-a-theme/: index.html
docs/: contact.html  index.html  listings.json  log.html  news.html  opportunities.html  people.html  publications.html  research.html  search.json  sitemap.xml
dr-nikolas-vendetta/: index.html
ed-palmer/: index.html
(+651 files in other folders)
