[tool.poetry]
name = "uclhal"
version = "0.1.0"
description = ""
authors = ["Steve Harris <doc@steveharris.me>"]

[tool.poetry.dependencies]
python = "^3.9"
Nikola = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
