[tool.poetry]
name = "uclhal"
version = "0.1.0"
description = ""
authors = ["Steve Harris <doc@steveharris.me>"]

[tool.poetry.dependencies]
python = "^3.9"
Nikola = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
python-lsp-server = "^1.3.1"
python-lsp-black = "^1.0.0"
mypy-ls = "^0.5.1"
pyls-isort = "^0.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
